--- a/yamls/joomla-2.5
+++ b/yamls/joomla-2.5
@@ -1,3 +1,6 @@
-# CVE-2012-2412 2.5.7 http://osvdb.org/show/87038
-# CVE-2012-4531 2.5.7 http://osvdb.org/87038 SA49678 http://developer.joomla.org/security/news/539-20120901-core-xss-vulnerability http://www.joomla.org/announcements/release-news/5463-joomla-2-5-7-released.html
-# CVE-2012-4532 2.5.7 http://osvdb.org/83490 SA49678 http://developer.joomla.org/security/news/540-20120902-core-xss-vulnerability http://www.joomla.org/announcements/release-news/5463-joomla-2-5-7-released.html http://www.darksecurity.de/advisories/2012/SSCHADV2012-014.txt
+# CVE-2012-1117 2.5.2   http://osvdb.org/79836
+# CVE-2012-1562 2.5.3   http://osvdb.org/80112
+# CVE-2012-1563 2.5.3   http://osvdb.org/80111
+# CVE-2012-2412 2.5.7   http://osvdb.org/87038
+# CVE-2012-4531 2.5.7   http://osvdb.org/87038 SA49678 http://developer.joomla.org/security/news/539-20120901-core-xss-vulnerability http://www.joomla.org/announcements/release-news/5463-joomla-2-5-7-released.html
+# CVE-2012-4532 2.5.7   http://osvdb.org/83490 SA49678 http://developer.joomla.org/security/news/540-20120902-core-xss-vulnerability http://www.joomla.org/announcements/release-news/5463-joomla-2-5-7-released.html http://www.darksecurity.de/advisories/2012/SSCHADV2012-014.txt
